tests/baselines/reference/objectLiteralArraySpecialization(strict=true).errors.txt
objectLiteralArraySpecialization.ts(3,2): error TS7010: 'constructor', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectLiteralArraySpecialization.ts (1 errors) ====
    declare function create<T>(initialValues?: T[]): MyArrayWrapper<T>;
    interface MyArrayWrapper<T> {
    	constructor(initialItems?: T[]);
    	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'constructor', which lacks return-type annotation, implicitly has an 'any' return type.
    	doSomething(predicate: (x: T, y: T) => boolean): void;
    }
    var thing = create([ { name: "bob", id: 24 }, { name: "doug", id: 32 } ]); // should not error
    thing.doSomething((x, y) => x.name === "bob"); // should not error
    